<resources>
    <string name="app_name">AppInformacio</string>

    <string name="title">App Informació Cines Granollers Nord</string>
    <string name="logoOCine">Logo OCine</string>

    <string name="cdRestaurants">iconRestaurants</string>
    <string name="cdCartellera">iconCartellera</string>
    <string name="cdSettings">iconSettings</string>

    <string name="caratulaAlimanas">Caratula Alimañas</string>
    <string name="caratulaFNAF">Caratula FNAF</string>
    <string name="caratulaSabenAquell">Caratula Saben Aquell</string>
    <string name="caratulaJDHambre">Caratula Juegos del Hambre</string>
    <string name="caratulaSawX">CaratulaSawX</string>
    <string name="caratulaMarvels">CaratulaMarvels</string>

    <string name="titleAlimanas">Alimañas</string>
    <string name="titleFNAF">Five Nights at Freddy\'s</string>
    <string name="titleSabenAquell">Saben Aquell</string>
    <string name="titleJDHambre">Los Juegos del Hambre: Balada de pájaros cantores y serpientes</string>
    <string name="titleSawX">Saw X</string>
    <string name="titleMarvels">The Marvels</string>

    <string name="descripcioAlimanas">Alimañas es una comedia negra que cuenta la historia de una familia que espera con ansias la muerte de una anciana, madre de Carlos y Paco, para poder heredar un edificio que esta en su propiedad.</string>
    <string name="descripcioFNAF">El aterrador y exitoso juego de miedo se convierte en un evento cinematográfico cuando Blumhouse lleva FIVE NIGHTS AT FREDDY\'S en la gran pantalla. La película gira en torno a un atormentado guardia de seguridad que empieza a trabajar en Freddy Fazbear\'s Pizza. En la primera noche de trabajo, se da cuenta de que no será fácil superar el turno de noche en la pizzería.</string>
    <string name="descripcioSabenAquell">Barcelona, finales de los 60. Eugenio Jofra, un joven joyero, conoce a Conchita en un autobús de línea. El flechazo es instantáneo y los dos comienzan la historia de amor de sus vidas. Eugenio aprende a tocar la guitarra para acompañar a Conchita, para lo que tendrá que luchar contra el miedo escénico. Eugenio se convierte en un fenómeno del humor underground de la ciudad. Poco a poco, entre los dos irán construyendo al personaje: las gafas, la camisa negra, el taburete, los cigarrillos y el vaso de tubo, que se convertirá en un éxito inesperado que empieza todos sus chistes con \'Saben aquell…\'.</string>
    <string name="descripcioJDHambre">Es la mañana de la cosecha que dará comienzo a los décimos Juegos del Hambre. Coriolanus Snow se prepara para una oportunidad única: alcanzar la gloria como mentor de los Juegos. La casa Snow atraviesa tiempos difíciles, y su destino depende de que Coriolanus consiga superar a sus compañeros como mentor del tributo asignado. Todo está en su contra. Lo han humillado al asignarle a la tributo del empobrecido Distrito 12. Ahora, sus destinos están irremediablemente unidos…</string>
    <string name="descripcioSawX">Situada entre los acontecimientos sucedidos en SAW y SAW II, John, desesperado y enfermo, viaja a México para someterse a un tratamiento experimental y muy arriesgado con la esperanza de curar su cáncer mortal. Sin embargo, toda la operación resulta ser un fraude para engañar a aquellos más vulnerables. Lleno de rabia y con un nuevo y escabroso propósito, John retomará su trabajo como asesino en serie y dará a probar su propia medicina a los embaucadores. Bajo la atenta mirada de Jigsaw, los jóvenes se enfrentaran a las trampas más ingeniosas, mortales y tortuosas en un visceral y despiadado juego.</string>
    <string name="descripcioMarvels">Carol Danvers, alias Capitana Marvel, ha recuperado su identidad de los tiránicos Kree y se ha vengado de la Inteligencia Suprema. Pero unas consecuencias imprevistas hacen que Carol cargue con el peso de un universo desestabilizado. Cuando sus obligaciones la envían a un agujero de gusano anómalo vinculado a un revolucionario Kree, sus poderes se enredan con los de su superfan de Jersey, Kamala Khan, también conocida como Ms. Marvel y los de su sobrina, a la que llevaba tiempo sin ver, la Capitana Monica Rambeau. Juntas, este insólito trío deberá formar un equipo y aprender a trabajar unidas para salvar el universo como "The Marvels"</string>

    <string name="cdFNAF"></string>
    <string name="restaurants">Restaurants</string>
    <string name="url">URL</string>
    <string name="telf">Telèfon</string>
    <string name="ubi">Ubicació</string>
    <string name="restaurantpomodoro">RestaurantPomodoro</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="restaurantwok">RestaurantWok</string>
    <string name="wok">Wok</string>
    <string name="restaurantmcdonalds">RestaurantMcDonald\'s</string>
    <string name="mcdonalds">McDonald\'s</string>
    <string name="restaurantviena">RestaurantViena</string>
    <string name="viena">Viena</string>
    <string name="restaurantkfc">RestaurantKFC</string>
    <string name="kfc">KFC</string>
    <string name="restaurantburgerking">RestaurantBurgerKing</string>
    <string name="burger_king">Burger King</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>