<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cartellera"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:contentDescription="@string/logoOCine"
        android:src="@drawable/logoocinegra">
    </ImageView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/caratulaAlimanas"
                    android:src="@drawable/alimanas">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="30sp"
                        android:text="@string/titleAlimanas">
                    </TextView>
                    <TextView
                        android:id="@+id/tvAlimanas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="10sp"
                        android:text=""
                        tools:ignore="SmallSp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="141dp"
                    android:layout_height="223dp"
                    android:contentDescription="@string/caratulaFNAF"
                    android:src="@drawable/fnaf">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="30sp"
                        android:text="@string/titleFNAF">
                    </TextView>
                    <TextView
                        android:id="@+id/tvFNAF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="10sp"
                        android:text=""
                        tools:ignore="SmallSp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/caratulaSabenAquell"
                    android:src="@drawable/sabenaquell">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="30sp"
                        android:text="@string/titleSabenAquell">
                    </TextView>
                    <TextView
                        android:id="@+id/tvSabenAquell"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="10sp"
                        android:text=""
                        tools:ignore="SmallSp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/caratulaJDHambre"
                    android:src="@drawable/juegosdelhambre">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="20sp"
                        android:text="@string/titleJDHambre">
                    </TextView>
                    <TextView
                        android:id="@+id/tvJDHambre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="10sp"
                        android:text=""
                        tools:ignore="SmallSp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="205dp"
                    android:contentDescription="@string/caratulaSawX"
                    android:src="@drawable/sawx">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="30sp"
                        android:text="@string/titleSawX">
                    </TextView>
                    <TextView
                        android:id="@+id/tvSawX"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="10sp"
                        android:text=""
                        tools:ignore="SmallSp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/caratulaMarvels"
                    android:src="@drawable/themarvels">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textSize="30sp"
                    android:text="@string/titleMarvels">
                </TextView>
                    <TextView
                        android:id="@+id/tvMarvels"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:textSize="10sp"
                        android:text=""
                        tools:ignore="SmallSp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>